# agent-evaluation-reference

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
agent/: requirements.txt
agent/app/: __init__.py  main.py
agents/_shared/: config.py  mcp_client.py  model_armor.py  versions.py
agents/account_agent/: Dockerfile  requirements.txt
agents/billing_agent/: Dockerfile  requirements.txt
agents/orchestrator/: Dockerfile
agents/technical_agent/: Dockerfile
data/: golden_dataset.json  pilot_billing_dataset.json
deploy/argocd/: install_argocd.sh
deploy/k8s/: canary-deployment.yaml  hpa.yaml  namespace.yaml  secret-template.yaml  service.yaml  (+2 more)
mcp_server/: Dockerfile  requirements.txt
scripts/: create_online_monitor.py  deploy_agent_engine.py  deploy_enterprise_agent.py  deploy_mcp_cloud_run.sh  enable_canary_traffic.sh  generate_traffic.py  load_test_agent_engine.py  patch_agent_labels.py  promote_canary.sh  publish_scc_findings.py  redeploy_all.py  register_agents.py  register_in_agent_registry.py  register_tools.py  rollback_canary.sh  run_simulation.py  sanity_check.py  setup_alerting.py  setup_enterprise_iam.sh  setup_gcp.sh  setup_github_secrets.sh  setup_model_armor.py  setup_telemetry_sink.py  setup_wif.sh  smoke_test_agents.py  trigger_tuning.py  verify_enterprise_deployment.py  walkthrough_report.py
tests/: conftest.py  test_agent.py  test_endpoint.py  test_evaluation_metrics.py  test_sanity_check.py
(+30 files in other folders)
